first commit on the branch1

--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -6,5 +6,6 @@
   </head>
   <body>
   <p>This is the original master branch</p>
+  <p> This is the branch first_branch. Which will turn out to be a mistake</p>
   </body>
 </html>
