--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -7,5 +7,6 @@
   <body>
   <p>This is the original master branch</p>
   <p> This is the branch first_branch. Which will turn out to be a mistake</p>
+  <p> hmmm, let's see what happens, if I first commit to the branch_1</p>
   </body>
 </html>
