--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -6,5 +6,6 @@
   </head>
   <body>
   <p>This is the original master branch</p>
+  <p> ok now I'm accidentally on master branch</p>
   </body>
 </html>
