new commit on master branch after pull request

--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -10,5 +10,6 @@
   <p> hmmm, let's see what happens, if I first commit to the branch_1</p>
   <p> ok now I'm accidentally on master branch</p>
   <p>marking as conflict resolved</>
+  <p> pulled new master down -- on master branch and all 6 lines including this one is on the master branch. after I add and commit </p>
   </body>
 </html>
